opensesame (2.9.5~pre1-ubuntu1) utopic; urgency=medium

  * Bugs fixed
    - Don't delete an item when a drop is cancelled

 -- Sebastiaan Mathot <sebastiaan@mantis>  Mon, 02 Mar 2015 13:42:35 +0100

opensesame (2.9.4-ubuntu1) utopic; urgency=medium

  * Bugs fixed
    - Prevent indirect recursion errors in overview area
    - Don't crash on empty loop item

 -- Sebastiaan Mathot <sebastiaan@mantis>  Wed, 11 Feb 2015 11:34:23 +0100

opensesame (2.9.3-ubuntu1) utopic; urgency=medium

  * Bugs fixed
    - Font size was specified in points instead of pixels in GUI
    - Legacy back-end crashed when specifying system font in general properties
    - Show arrow-size field in sketchpad
    - Fix a bug where description changes weren't applied
  * Improvements
    - Allow descriptions to wrap over multiple lines for better screen use
    - Massively improved performance for large experiments (#305)

 -- Sebastiaan Mathot <sebastiaan@mantis>  Fri, 16 Jan 2015 09:59:40 +0100

opensesame (2.9.2-ubuntu1) utopic; urgency=medium

  * Bugs fixed
    - Fix numeric textline elements in sketchpad (#292)
    - 'Reset feedback variables' option restored in feedback item (#297)
    - Safely print unicode debug output (convert to ascii)
    - Fix unicode bug in opensesamerun gui
    - Convert backspace key to key name (#286)
    - Fix a bug with variably defined properties of circle elements in sketchpad GUI (#300)
    - Fix circle properties in xpyriment back-end (#299)
    - Fix a bug with variably defined properties of Gabor and noise patches in sketchpad GUI
    - Fix a bug when permanently deleting an item that is present in multiple sequence items
  * Improvements
    - Use better fallback image in sketchpad
    - Deprecate transparent variable management (#294)
    - Add custom icon to debian packaging (#296)
    - Form_base plug-in shows script by default (#298)
    - Add custom icon to debian packaging
    - Deprecate transparent variable management option