@@ -2,6 +2,8 @@ opensesame (2.9.5~pre1-ubuntu1) utopic; urgency=medium
 
   * Bugs fixed
     - Don't delete an item when a drop is cancelled
+  * Improvements
+    - Explicitly notify of variable sequence preparation time
 
  -- Sebastiaan Mathot <sebastiaan@mantis>  Mon, 02 Mar 2015 13:42:35 +0100
 
